--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
- <h1>Olá electron</h1> 
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <main class="flex">
+      <h2>Login</h2> 
+
+      <div class="wrapper wrapper_formulario">
+        <div class="wrapper wrapper_login_sec">
+          <label for="email_user">Email: </label>
+          <input type="text" name="" id="email_user">
+        </div>
+      </div>
+
+    </main>
+
+  </body>
 </html>
