--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,21 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Vite + React</title>
   </head>
   <body>
-    <main class="flex">
-      <h2>Login</h2> 
-
-      <div class="wrapper wrapper_formulario">
-        <div class="wrapper wrapper_login_sec">
-          <label for="email_user">Email: </label>
-          <input type="text" name="" id="email_user">
-        </div>
-      </div>
-
-    </main>
-
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
