--- a/frontend/src/renderer/index.html
+++ b/frontend/src/renderer/index.html
@@ -9,7 +9,7 @@
 
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; fonts-src 'self' https://fonts.gstatic.com; img-src 'self' data:"
+      content="default-src 'self'; connect-src 'self' http://localhost:3870;script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; fonts-src 'self' https://fonts.gstatic.com; img-src 'self' data:"
     />
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
